# Apohara-Catalyst

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PRINCIPLES.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  deny.toml  package.json
crates/apohara/: Cargo.toml
crates/apohara-anti-thrash/: AGENTS.md  Cargo.toml
crates/apohara-anti-thrash/src/: lib.rs
crates/apohara-anti-thrash/tests/: smoke.rs
crates/apohara-audit/: AGENTS.md  Cargo.toml
crates/apohara-audit/src/: lib.rs
crates/apohara-audit/tests/: overflow.rs  sink.rs
crates/apohara-context-primitives/: Cargo.toml
crates/apohara-context-primitives/benches/: primitives_throughput.rs
crates/apohara-context-primitives/src/: fingerprint.rs  lib.rs  lsh.rs  queueing.rs  simhash.rs
crates/apohara-coordinator/: AGENTS.md  Cargo.toml
crates/apohara-coordinator/src/: auto_spawn.rs  blast_radius.rs  conflict_matrix.rs  coordinator.rs  lib.rs  manifest.rs  scheduler_decision.rs
crates/apohara-coordinator/tests/: conflict_matrix.rs  continuation_wiring.rs  coordinator_loop.rs  smoke.rs
crates/apohara-daemon/: Cargo.toml
crates/apohara-daemon/src/: dispatch_remote.rs  health.rs  health_tests.rs  lib.rs  main.rs  profiles.rs  profiles_tests.rs  reactor.rs  recovery.rs  shutdown.rs  shutdown_tests.rs
crates/apohara-desktop-dioxus/: Cargo.toml  Dioxus.toml
crates/apohara-desktop-dioxus/.cargo/: config.toml
crates/apohara-desktop-dioxus/assets/: brand.css
crates/apohara-desktop-dioxus/benches/: render_bench.rs
crates/apohara-desktop-dioxus/scripts/: dev.sh  measure_reload.sh
crates/apohara-desktop-dioxus/src/: app.rs  commands.rs  lib.rs  main.rs
crates/apohara-desktop-dioxus/tests/: ipc_smoke.rs
crates/apohara-dispatch/: Cargo.toml
crates/apohara-dispatch/benches/: dispatch_throughput.rs
crates/apohara-dispatch/src/: api.rs  careful.rs  cli_driver.rs  cli_driver_tests.rs  continuation.rs  executor.rs  lib.rs  reconciler.rs  reconciler_tests.rs  retry.rs  state.rs  state_tests.rs  tauri_bridge.rs  teammate.rs
crates/apohara-episodic/: Cargo.toml
crates/apohara-episodic/src/: lib.rs  path.rs  store.rs
crates/apohara-hooks/: Cargo.toml
crates/apohara-hooks-server/: AGENTS.md  Cargo.toml
crates/apohara-hooks-server/src/: auth.rs  broadcast.rs  broadcast_tests.rs  endpoint_file.rs  event.rs  lib.rs
crates/apohara-hooks-server/tests/: auth.rs  endpoint_file.rs  event.rs  integration_e2e.rs  wiring.rs
crates/apohara-hooks/benches/: hooks_throughput.rs
crates/apohara-hooks/src/: additional_context.rs  additional_context_tests.rs  api.rs  compact_reinjection.rs  compact_reinjection_tests.rs  context_warnings.rs  context_warnings_tests.rs  events.rs  events_tests.rs  installer.rs  installer_tests.rs  learnings_dump.rs  learnings_dump_tests.rs  lib.rs  tauri_bridge.rs
crates/apohara-indexer/: AGENTS.md  Cargo.toml
crates/apohara-indexer/src/: db.rs  dependency.rs  embeddings.rs  index.rs  indexer.rs  lib.rs  main.rs  parser.rs  server.rs  storage.rs
crates/apohara-indexer/tests/: indexer_persistence.rs  memory_integration.rs  persistence_reopen.rs  sqlite_vec_storage.rs
crates/apohara-mcp/: Cargo.toml
crates/apohara-mcp-bridge/: AGENTS.md  Cargo.toml  default_mcp.json
crates/apohara-mcp-bridge/src/: canonical.rs  jsonc.rs  jsonc_tests.rs  lib.rs
crates/apohara-mcp-bridge/tests/: adapters.rs  smoke.rs
crates/apohara-mcp/benches/: mcp_throughput.rs
crates/apohara-mcp/src/: api.rs  audit_logger.rs  bootstrap.rs  injection.rs  input_validation.rs  lib.rs  permission_guard.rs  rate_limit.rs  server.rs  tauri_bridge.rs
crates/apohara-notifications/: AGENTS.md  Cargo.toml
crates/apohara-notifications/src/: lib.rs
crates/apohara-notifications/tests/: api.rs
crates/apohara-projector/: Cargo.toml
crates/apohara-projector/benches/: projector_throughput.rs
crates/apohara-projector/src/: api.rs  json_patch_stream.rs  json_patch_stream_tests.rs  lib.rs  tauri_bridge.rs  transcript_transformer.rs  transcript_transformer_tests.rs
crates/apohara-prompt-cache/: Cargo.toml
crates/apohara-prompt-cache/benches/: cache_throughput.rs
crates/apohara-prompt-cache/src/: hot.rs  key.rs  lib.rs  safety_layers.rs  telemetry.rs  warm.rs
crates/apohara-prompt-cache/tests/: round_trip.rs
crates/apohara-reaction-engine/: Cargo.toml
crates/apohara-reaction-engine/src/: conf.rs  executor.rs  lib.rs  state_machine.rs
crates/apohara-remote-worker/: Cargo.toml
crates/apohara-remote-worker/src/: handshake.rs  lib.rs  location.rs  stream.rs
crates/apohara-safety/: Cargo.toml
crates/apohara-safety/benches/: safety_throughput.rs
crates/apohara-safety/src/: api.rs  auto_approval.rs  auto_approval_tests.rs  bash_compound.rs  bash_compound_tests.rs  durable_prompt.rs  durable_prompt_tests.rs  guardrail_flags.rs  guardrail_profiles_tests.rs  inv_bash_scope.rs  inv_bash_scope_test.rs  lib.rs  pattern_validator.rs  pattern_validator_tests.rs  patterns.rs  patterns_tests.rs  permission_cache.rs  permission_cache_grid_tests.rs  permission_grid.rs  permission_service.rs  permission_service_tests.rs  pure_profiles.rs  runner_policy_tests.rs  settings_hierarchy.rs  settings_hierarchy_tests.rs  tauri_bridge.rs
crates/apohara-sandbox/: AGENTS.md  Cargo.toml
crates/apohara-sandbox/src/: main.rs  runner.rs
crates/apohara-sandbox/tests/: canonicalize_wiring.rs  runner_e2e.rs
crates/apohara-secrets/: AGENTS.md  Cargo.toml
crates/apohara-secrets/src/: lib.rs
crates/apohara-secrets/tests/: backend.rs  integration.rs
crates/apohara-spec/: Cargo.toml
crates/apohara-spec/benches/: spec_throughput.rs
crates/apohara-spec/src/: api.rs  lib.rs  plan_documents.rs  plan_documents_tests.rs  plan_status_cache.rs  plan_status_cache_tests.rs  rfc2119.rs  rfc2119_tests.rs  tauri_bridge.rs  watcher.rs  (+1 more)
crates/apohara-ssh-server/: Cargo.toml
crates/apohara-transport/: Cargo.toml
crates/apohara-tui/: Cargo.toml
crates/apohara-types/: AGENTS.md  Cargo.toml
crates/apohara-verification/: Cargo.toml
crates/apohara-worktree/: AGENTS.md  Cargo.toml
(+729 files in other folders)
