[workspace]
resolver = "2"
members = [
    "crates/apohara-types",
    "crates/apohara-indexer",
    "crates/apohara-sandbox",
    "crates/apohara-worktree",
    "packages/desktop/src-tauri",
    "crates/apohara-pathsafety",
    "crates/apohara-persistence",
    "crates/apohara-notifications",
    "crates/apohara-attention",
    "crates/apohara-audit",
    "crates/apohara-secrets",
    "crates/apohara-token-accounting",
    "crates/apohara-event-humanizer",
    "crates/apohara-anti-thrash",
    "crates/apohara-mcp-bridge",
    "crates/apohara-hooks-server",
    "crates/apohara-coordinator",
    "crates/apohara-ssh-server",
    "crates/apohara-remote-worker",
    "crates/apohara-daemon",
    "crates/apohara-client",
    "crates/apohara-transport",
    "crates/apohara-ws-hub",
    "crates/apohara-reaction-engine",
    "crates/apohara-dispatch",
    "crates/apohara-verification",
    "crates/apohara-safety",
    "crates/apohara-spec",
    "crates/apohara-mcp",
    "crates/apohara-hooks",
    "crates/apohara-decomposer",
    "crates/apohara-projector",
    "crates/apohara",
]

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
repository = "https://github.com/SuarezPM/Apohara"
rust-version = "1.95"

[workspace.dependencies]
# Common deps with single source of version truth
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ts-rs = { version = "11.0", features = ["serde-json-impl", "uuid-impl"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
libc = "0.2"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
