[package]
name = "apohara-audit"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt", "macros", "time"] }
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
ts-rs.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util", "macros"] }
