[package]
name = "apohara-context-primitives"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = "1"
bitvec = "1"
apohara-types = { path = "../apohara-types" }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "primitives_throughput"
harness = false
