[package]
name = "apohara-desktop-dioxus"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Apohara Catalyst desktop UI (Dioxus rewrite, Phase 2 bake-off)"

# Standalone single-crate workspace. See workspace-root Cargo.toml `exclude`
# entry for the wry-version-clash that forces this isolation. Will rejoin
# the main workspace en Sprint 19 when packages/desktop/src-tauri retires.
[workspace]

[lib]
name = "apohara_desktop_dioxus"
path = "src/lib.rs"

[[bin]]
name = "apohara-desktop-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"
fuzzy-matcher = "0.3"
petgraph = "0.6"
# syntect default-features=false skips the `onig` native dep; we only need
# the pure-Rust `fancy-regex` path + the bundled default syntaxes/themes.
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
] }
# alacritty_terminal powers the headless terminal state machine that backs
# TerminalPane (G2.D.1). We only use the Term + vte::ansi::Processor pair;
# no PTY, no event loop. Default `serde` feature is harmless and keeps the
# door open for snapshot tests later.
alacritty_terminal = "0.26"

[dev-dependencies]
dioxus-ssr = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["macros", "rt"] }

[[bench]]
name = "render_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
