[package]
name = "apohara-dispatch"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "process"] }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
apohara-types = { path = "../apohara-types" }
apohara-coordinator = { path = "../apohara-coordinator" }
apohara-secrets = { path = "../apohara-secrets" }
apohara-token-accounting = { path = "../apohara-token-accounting" }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
criterion = "0.5"

[[bench]]
name = "dispatch_throughput"
harness = false
