[package]
name = "apohara-hooks-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = "1.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
apohara-types = { path = "../apohara-types" }
apohara-audit = { path = "../apohara-audit" }
sha2.workspace = true
hex.workspace = true
tempfile = "3.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
