[package]
name = "apohara-hooks"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = "3"
apohara-types = { path = "../apohara-types" }
apohara-hooks-server = { path = "../apohara-hooks-server" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hooks_throughput"
harness = false
