[package]
name = "apohara-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "apohara_indexer"
path = "src/lib.rs"

[[bin]]
name = "apohara-indexer"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
blake3 = "1.5"
anyhow = "1.0.102"
tracing = "0.1.44"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
libc = "0.2"
