[package]
name = "apohara-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "apohara_indexer"
path = "src/lib.rs"

[[bin]]
name = "apohara-indexer"
path = "src/main.rs"

[dependencies]
# Workspace-inherited (single source of version truth — see root Cargo.toml's
# [workspace.dependencies]).
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Crate-local deps (not in [workspace.dependencies] — version pinned here).
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
# rusqlite "bundled" statically compiles SQLite + extension support; "load_extension"
# enables sqlite3_auto_extension via ffi (see storage.rs::ensure_vec_extension_registered).
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
blake3 = "1.5"
# `dirs` is in workspace.dependencies at 5.0; this crate had it pinned to 6.0.
# Keep the explicit pin so the user-facing path resolution doesn't regress
# behavior changes between 5.x and 6.x.
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
libc = { workspace = true }
