[package]
name = "apohara-mcp-bridge"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
tracing.workspace = true
