[package]
name = "apohara-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
tower = "0.5"
hyper = "1.5"
rand = "0.8"
hex = { workspace = true }
subtle = "2.5"
tauri = { version = "2", optional = true }
apohara-types = { path = "../apohara-types" }
apohara-mcp-bridge = { path = "../apohara-mcp-bridge" }
apohara-safety = { path = "../apohara-safety" }

[features]
default = []
tauri = ["dep:tauri"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serial_test = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true, features = ["test-util", "macros"] }

[[bench]]
name = "mcp_throughput"
harness = false
