[package]
name = "apohara-notifications"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11"
