[package]
name = "apohara-projector"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", optional = true }
apohara-types = { path = "../apohara-types" }

[features]
default = []
tauri = ["dep:tauri"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "projector_throughput"
harness = false
