[package]
name = "apohara-projector"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
apohara-types = { path = "../apohara-types" }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "projector_throughput"
harness = false
