[package]
name = "apohara-reaction-engine"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
apohara-types = { path = "../apohara-types" }

[dev-dependencies]
tempfile = "3.10"
