[package]
name = "apohara-remote-worker"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[[bin]]
name = "handshake_oracle"
path = "src/bin/handshake_oracle.rs"

[dev-dependencies]
tempfile = "3.10"
