[package]
name = "apohara-safety"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = "1"
globset = "0.4"
url = "2"
tauri = { version = "2", optional = true }
apohara-types = { path = "../apohara-types" }

[features]
default = []
tauri = ["dep:tauri"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "safety_throughput"
harness = false
