[package]
name = "apohara-sandbox"
version = "0.1.0"
edition = "2021"
description = "Syscall-level sandbox for Apohara worktree agents (seccomp-bpf + Linux namespaces)"
license = "MIT"

[lib]
name = "apohara_sandbox"
path = "src/lib.rs"

[[bin]]
name = "apohara-sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
apohara-pathsafety = { path = "../apohara-pathsafety" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["sched", "process", "fs", "mount", "user"] }
seccompiler = { version = "0.5", features = ["json"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
