[package]
name = "apohara-secrets"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
