[package]
name = "apohara-ssh-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
russh = "0.61"
russh-keys = "0.50.0-beta.7"
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
