[package]
name = "apohara-transport"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[lib]
name = "apohara_transport"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util", "macros"] }
