[package]
name = "apohara-types"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
