[package]
name = "apohara-types"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"
required-features = ["ts-export"]

[features]
default = []
ts-export = []

[dev-dependencies]
tempfile = "3.10"
