[package]
name = "apohara-worktree"
edition = "2021"
version = "1.0.0-dev"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
repository = "https://github.com/SuarezPM/Apohara"

[lib]
name = "apohara_worktree"
path = "src/lib.rs"

[[bin]]
name = "apohara-worktree-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ts-rs = { version = "11.0", features = ["serde-json-impl", "uuid-impl"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.10"
tokio = { version = "1", features = ["test-util", "macros"] }
