[package]
name = "apohara"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apohara"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
apohara-dispatch = { path = "../apohara-dispatch" }
apohara-mcp = { path = "../apohara-mcp" }
apohara-hooks = { path = "../apohara-hooks" }
apohara-spec = { path = "../apohara-spec" }
apohara-safety = { path = "../apohara-safety" }
apohara-verification = { path = "../apohara-verification" }
apohara-decomposer = { path = "../apohara-decomposer" }
apohara-projector = { path = "../apohara-projector" }
